change in media

--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
                     <p class="cheackbox-text">By signing up I agree with <span>terms and conditions</span></p>
                 </div>
                 <div class="sign-btn">
-                    <a href="#" class="button" >Sign Up</a>
+                    <a href="#" class="button">Sign Up</a>
 
-                    <a class="button-login"target="_blank" href="http://127.0.0.1:5500/index1.html"><span class="text">or</span> Log
+                    <a class="button-login" target="_blank" href="http://127.0.0.1:5500/index1.html"><span
+                            class="text">or</span> Log
                         in</a>
                 </div>
 
