--- a/login/index1.html
+++ b/login/index1.html
@@ -45,7 +45,7 @@
                 <div class="sign-btn">
                     <a href="#" class="button">Login</a>
 
-                    <a class="button-login" target="_blank" href="http://127.0.0.1:5500/index.html"><span class="text">or</span> Sign Up</a>
+                    <a class="button-login" target="_blank" href="#"><span class="text">or</span> Sign Up</a>
                 </div>
 
             </div>
