--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="sign-btn">
                     <a href="#" class="button">Sign Up</a>
 
-                    <a class="button-login" target="_blank" href="#"><span
+                    <a class="button-login" target="_blank" href="https://rblogin29.netlify.app/"><span
                             class="text">or</span> Log
                         in</a>
                 </div>
